Can't import or export Alembic with changing UVs #76132

Closed
opened 2020-04-26 21:24:56 +02:00 by Niko Maisuradze · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-04-23 21:07, hash: d712f1f83a
Worked: (newest version of Blender that worked as expected)

Short description of error
After exporting alembic of object with changing UVs, after importing, UVs either appear frozen on first frame, or in case of varying vertex count - they disappear after first frame.

Exact steps for others to reproduce the error

  1. Open attached blend file. Export "sph_for_export" object to alembic. Import alembic. Assign material with texture on uv coordinates. UVs will be frozen to first frame.
  2. Open attached blend file. Export "sph_varying_for_export" object to alembic. Import alembic. Assign material with texture on uv coordinates. UVs will desappear after first frame.

uv_test.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-04-23 21:07, hash: `d712f1f83a` Worked: (newest version of Blender that worked as expected) **Short description of error** After exporting alembic of object with changing UVs, after importing, UVs either appear frozen on first frame, or in case of varying vertex count - they disappear after first frame. **Exact steps for others to reproduce the error** 1. Open attached blend file. Export "sph_for_export" object to alembic. Import alembic. Assign material with texture on uv coordinates. UVs will be frozen to first frame. 2. Open attached blend file. Export "sph_varying_for_export" object to alembic. Import alembic. Assign material with texture on uv coordinates. UVs will desappear after first frame. [uv_test.blend](https://archive.blender.org/developer/F8496530/uv_test.blend)

Added subscriber: @NikoMaisuradze

Added subscriber: @NikoMaisuradze

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @dr.sybren, @brecht

Added subscribers: @dr.sybren, @brecht

@dr.sybren, not sure if this should be triaged as known limitation or bug.

@dr.sybren, not sure if this should be triaged as known limitation or bug.

This is a two-fold issue:

  • In the exporter, UVs are explictly only exported on the first frame (thanks to if (m_first_frame && m_settings.export_uvs) { … }).
  • In the importer, the animation of UVs and normals is overlooked; when the mesh geometry is not animated, the entire mesh is considered constant.

I consider the former as a bug, even though it looks like an explicit choice. When exporting an animated mesh the topology can change, and then the UV coordinates of the first frame are no longer valid. This issue is easy to fix by changing that if-statement to if (m_settings.export_uvs) { … }. The only downside to this is that Alembic files may become larger when a mesh is detected as "animated" while its UV map is not. Apart from the size of the exported file (and thus the speed of exporting & importing) I don't see any issue with this.

The latter I certainly also consider a bug. Fortunately, this is also very simple to fix by adding a few more checks to the appropriate has_animations() function.

This is a two-fold issue: - In the exporter, UVs are explictly only exported on the first frame (thanks to `if (m_first_frame && m_settings.export_uvs) { … }`). - In the importer, the animation of UVs and normals is overlooked; when the mesh geometry is not animated, the entire mesh is considered constant. I consider the former as a bug, even though it looks like an explicit choice. When exporting an animated mesh the topology can change, and then the UV coordinates of the first frame are no longer valid. This issue is easy to fix by changing that if-statement to `if (m_settings.export_uvs) { … }`. The only downside to this is that Alembic files may become larger when a mesh is detected as "animated" while its UV map is not. Apart from the size of the exported file (and thus the speed of exporting & importing) I don't see any issue with this. The latter I certainly also consider a bug. Fortunately, this is also very simple to fix by adding a few more checks to the appropriate `has_animations()` function.
Sybren A. Stüvel changed title from Cant export Alembic with changing UVs to Can't import or export Alembic with changing UVs 2020-05-12 14:47:45 +02:00

This issue was referenced by 65574463fa

This issue was referenced by 65574463fa2d31dc912cf886649c62a7d0ad2450

This issue was referenced by 94cbfb71bc

This issue was referenced by 94cbfb71bcf4f0499301f7c6f201124d8740cacf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sybren A. Stüvel self-assigned this 2020-05-12 15:07:41 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76132
No description provided.